fixed scrolling and scaling on mobile

--- a/src/components/css/armor.css
+++ b/src/components/css/armor.css
@@ -13,8 +13,6 @@
 
     overflow-y: auto;
     overflow-x: hidden;
-
-    padding-bottom: 60px;
 }
 
 .armor-chips-bar {
