--- a/src/components/css/mod.css
+++ b/src/components/css/mod.css
@@ -139,8 +139,8 @@ span {font-weight: bold;}
 .mod-buttons button img {
     position: absolute;
 
-    height: 63px;
-    height: 63px;
+    height: 100%;
+    width: 100%;
     left: 0;
     top: 0;
 
@@ -205,3 +205,18 @@ span {font-weight: bold;}
 .grenade { color: #e67e22; border-color: #e67e22 !important;}
 .class { color: #9b59b6; border-color: #9b59b6 !important;}
 .orb { color: #1abc9c; border-color: #1abc9c !important;}
+
+@media screen and (max-width: 600px) {
+    .kickstart .mod-stacks li p:first-child {
+        font-size: 12px;
+    }
+
+    .kickstart .mod-buttons {
+        flex-wrap: wrap;
+    }
+
+    .kickstart .kickstart-info {
+        margin-top: 12px;
+        width: 80%;
+    }
+}
